[package]
name = "teaspeak_filelib"
version = "0.1.0"
authors = ["WolverinDEV <git@did.science>"]
edition = "2018"

[dependencies]
slog = "2.7"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.13.0"
tokio-openssl = "0.6.1"
openssl = "0.10.32"
chrono = "0.4.19"
futures = "0.3.12"
retain_mut = "0.1.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
httparse = "1.3.4"
socket2 = { version = "0.4.0-alpha.2", features = ["all"] }
parking_lot = "0.11.1"
sys-info = "0.8.0"
vmap = "0.4.3"
url = "2.2.0"
rand = "0.8.3"
build_timestamp = "0.1.0"

[dev-dependencies]
slog-term = "2.6.0"
slog-async = "2.5.0"